<resources>
    <string name="app_name">Kushagra</string>

    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="help">Help</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="try_again">Try Again</string>

    <!--  Common Error Message  -->
    <string name="unknown_error_message">Unknown Error Occurred</string>
    <string name="camera_permission_denied">Camera Permission Denied</string>
    <string name="file_read_error">Umm! Unable to read data</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="navigation_header_description">Navigation header</string>
    <string name="default_uname">Username</string>
    <string name="default_email">user.name@argi.ai.com</string>
    <string name="menu_navigation_bookmarked">Bookmarks</string>
    <string name="menu_navigation_configure_server">Configure Server</string>
    <string name="menu_navigation_settings">Settings</string>
    <string name="menu_navigation_invite_a_friend">Invite a Friend</string>
    <string name="menu_navigation_invite_a_friend_title">Invite Friends via</string>
    <string name="menu_navigation_invite_a_friend_message">Hey,\n\nKushagra App is an AI-powered,
        intuitive app that I use to identify my crops, crop diseases and get solutions.\n\n
        Get it for free at Play Store</string>


    <string name="navigation_crop_title">Your Crops</string>
    <string name="navigation_disease_title">Crop Diseases</string>

    <!--  Server Address Debug  -->
    <string name="debug_server_address_title">Server Address</string>
    <string name="debug_server_address_message">Enter address of AI Inference Server</string>
    <string name="debug_server_address_success">Server Address Saved</string>
    <string name="debug_server_address_error">Enter a Valid Server Address</string>

    <!--  Recent Card  -->
    <string name="recent_card_bookmark_description">Recent bookmark</string>
    <string name="recent_card_image_view_description">Recent Card Image</string>
    <string name="recent_card_subtitle">Some Details</string>

    <!--  Bottom Tab Bar  -->
    <string name="menu_bottom_crop">Crop</string>
    <string name="menu_bottom_disease">Disease</string>

    <!--  Main Activity  -->
    <string name="sign_in_error_message">Unable to Sign In</string>
    <string name="sign_in_success_message">Sign In Successful</string>

    <!--  Detail Activity  -->
    <string name="new_crop_detection_title">New Crop Detection</string>
    <string name="new_disease_detection_title">New Disease Detection</string>
    <string name="crop_details_title">Crop Details</string>
    <string name="disease_details_title">Disease Details</string>
    <string name="detail_image_description">Picture used for prediction</string>
    <string name="detail_confirm_message">Are you sure\?\nDo you want to save\?</string>

    <!--  Detail Activity Menu  -->
    <string name="menu_detail_add_to_bookmarks">Add to Bookmarks</string>
    <string name="menu_detail_remove_from_bookmarks">Remove from Bookmarks</string>
    <string name="menu_detial_save_to_pdf">Save to PDF</string>
    <string name="menu_detail_save_image_to_photos">Save Image to Photos</string>
    <string name="menu_detail_save_map_to_photos">Save Map to Photos</string>

    <!--  Models  -->
    <string name="not_available">N/A</string>
    <string name="info_subtitle_name">Name</string>
    <string name="info_subtitle_latitude">Latitude</string>
    <string name="info_subtitle_longitude">Longitude</string>
    <string name="info_subtitle_altitude">Altitude</string>
    <string name="info_subtitle_type">Type</string>
    <string name="info_subtitle_technique_used">Techniques Used</string>
    <string name="info_subtitle_varieties">Varieties</string>
    <string name="info_subtitle_temp">Temperature</string>
    <string name="info_subtitle_rainfall">Rainfall</string>
    <string name="info_subtitle_soil">Soil Type</string>
    <string name="info_subtitle_highest_producer">Highest Producer</string>
    <string name="info_subtitle_major_producers">Major Producers</string>

</resources>
