<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".detail.DetailActivity">

    <item
        android:id="@+id/menu_save_prediction"
        android:icon="@drawable/ic_save_24dp"
        android:title=""
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_bookmark"
        android:icon="@drawable/ic_bookmark_outline_24dp"
        android:title="@string/menu_detail_add_to_bookmarks" />

    <item
        android:id="@+id/menu_save_to_pdf"
        android:icon="@drawable/ic_save_docblack_24dp"
        android:title="@string/menu_detial_save_to_pdf" />

    <item
        android:id="@+id/menu_save_image_to_photos"
        android:icon="@drawable/ic_photo_24dp"
        android:title="@string/menu_detail_save_image_to_photos" />

    <item
        android:id="@+id/menu_save_map_to_photos"
        android:icon="@drawable/ic_map_24dp"
        android:title="@string/menu_detail_save_map_to_photos" />

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/delete" />

</menu>